{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 19,
  "lineage": "f0274a9d-6944-768e-a3be-0bc9c2e80b5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hack_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02026a0bbecc9b8df",
            "domain": "vpc",
            "id": "eipalloc-02026a0bbecc9b8df",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-224-144-152.compute-1.amazonaws.com",
            "public_ip": "34.224.144.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hack_EIP_NAT"
            },
            "tags_all": {
              "Name": "hack_EIP_NAT"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.hack_gw",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hack_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:internet-gateway/igw-0b3f105fb2bc53673",
            "id": "igw-0b3f105fb2bc53673",
            "owner_id": "905418244780",
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "dependencies": [
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hack_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418244780:targetgroup/hack-tf-lb-alb-tg/624098055121a1aa",
            "arn_suffix": "targetgroup/hack-tf-lb-alb-tg/624098055121a1aa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418244780:targetgroup/hack-tf-lb-alb-tg/624098055121a1aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hack-tf-lb-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "dependencies": [
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hack_nat_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02026a0bbecc9b8df",
            "association_id": "eipassoc-00e6af52140ce92f8",
            "connectivity_type": "public",
            "id": "nat-0232b0c68dad9ec4b",
            "network_interface_id": "eni-0130c88156a5828ad",
            "private_ip": "10.0.0.13",
            "public_ip": "34.224.144.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b5f81ffec44f8a01",
            "tags": {
              "Name": "Hack NAT private subnet"
            },
            "tags_all": {
              "Name": "Hack NAT private subnet"
            }
          },
          "dependencies": [
            "aws_eip.hack_eip",
            "aws_internet_gateway.hack_gw",
            "aws_subnet.hack_subnet_1",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hack_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:route-table/rtb-0eb1f42d2b73d9100",
            "id": "rtb-0eb1f42d2b73d9100",
            "owner_id": "905418244780",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3f105fb2bc53673",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hack_gw",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hack_route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:route-table/rtb-04258750dcaf0968d",
            "id": "rtb-04258750dcaf0968d",
            "owner_id": "905418244780",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0232b0c68dad9ec4b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hack_eip",
            "aws_internet_gateway.hack_gw",
            "aws_nat_gateway.hack_nat_private_subnet",
            "aws_subnet.hack_subnet_1",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hack_rota1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7bf240cb87edda4",
            "route_table_id": "rtb-0eb1f42d2b73d9100",
            "subnet_id": "subnet-0b5f81ffec44f8a01"
          },
          "dependencies": [
            "aws_internet_gateway.hack_gw",
            "aws_route_table.hack_route_public",
            "aws_subnet.hack_subnet_1",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hack_rota2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0798ec5a3fbe9a63d",
            "route_table_id": "rtb-0eb1f42d2b73d9100",
            "subnet_id": "subnet-0241cd8ddc2f3dd2a"
          },
          "dependencies": [
            "aws_internet_gateway.hack_gw",
            "aws_route_table.hack_route_public",
            "aws_subnet.hack_subnet_2",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hack_rota3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055edfedbd072b00f",
            "route_table_id": "rtb-04258750dcaf0968d",
            "subnet_id": "subnet-07146f88afee7c154"
          },
          "dependencies": [
            "aws_eip.hack_eip",
            "aws_internet_gateway.hack_gw",
            "aws_nat_gateway.hack_nat_private_subnet",
            "aws_route_table.hack_route_table_private",
            "aws_subnet.hack_subnet_1",
            "aws_subnet.hack_subnet_3",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hack_sg_for_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:security-group/sg-0bf79ea979dc069b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf79ea979dc069b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http request from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c8327fe23ea65b5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hack-sg_for_ec2",
            "name_prefix": "",
            "owner_id": "905418244780",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hack_sg_for_elb",
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hack_sg_for_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:security-group/sg-00c8327fe23ea65b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c8327fe23ea65b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hack-sg_for_elb",
            "name_prefix": "",
            "owner_id": "905418244780",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hack_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:subnet/subnet-0b5f81ffec44f8a01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5f81ffec44f8a01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418244780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "dependencies": [
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hack_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:subnet/subnet-0241cd8ddc2f3dd2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0241cd8ddc2f3dd2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418244780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "dependencies": [
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hack_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:subnet/subnet-07146f88afee7c154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07146f88afee7c154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418244780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-027e444ed010e0e62"
          },
          "dependencies": [
            "aws_vpc.hack_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hack_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418244780:vpc/vpc-027e444ed010e0e62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-014ccf1e25b4822c1",
            "default_route_table_id": "rtb-09cf691bce1b8c4c2",
            "default_security_group_id": "sg-0a8268b5744ed9178",
            "dhcp_options_id": "dopt-0aad5c4d06b53cbbf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027e444ed010e0e62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cf691bce1b8c4c2",
            "owner_id": "905418244780",
            "tags": {
              "Name": "hack-vpc"
            },
            "tags_all": {
              "Name": "hack-vpc"
            }
          }
        }
      ]
    }
  ]
}